--- a/appveyor.yml
+++ b/appveyor.yml
@@ -1,7 +1,16 @@
+image: Visual Studio 2017
 configuration : Release
 
+environment:
+  nodejs_version: "8"
+  
 before_build:
   - nuget restore
+
+install:
+  - ps: Install-Product node $env:nodejs_version
+  - node --version
+  - npm --version
   
 build:
   verbosity: minimal
