--- a/package.json
+++ b/package.json
@@ -139,6 +139,9 @@
       "react-app"
     ]
   },
+  "homepage" : {
+    "http://DianaKuzmenko.github.io/dubbing"
+  },
   "devDependencies": {
     "tslint": "^5.13.0",
     "typescript": "^3.2.2"
